fix Contrast

--- a/css/style.css
+++ b/css/style.css
@@ -4051,7 +4051,7 @@ a:hover .navbar-setting-button,
 }
 
 .hashtag {
-    color: #0000A8;
+    color: #0000EE;
 }
 
 @media screen and (max-width: 991px) {
